--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/insert_btn"
-            android:scaleType="center"
+            android:scaleType="fitXY"
             android:clipToOutline="true"
             android:padding="0dp"
             android:clickable="true"
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/insert_btn"
-            android:scaleType="center"
+            android:scaleType="fitXY"
             android:clipToOutline="true"
             android:padding="0dp"
             android:clickable="true"
