--- a/app/src/main/res/layout/donation_tree.xml
+++ b/app/src/main/res/layout/donation_tree.xml
@@ -71,7 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/img1"
-                android:scaleType="centerCrop" />
+                android:scaleType="fitXY" />
 
             <ImageView
                 android:id="@+id/imageView1"
