feat : 기부현황 퍼센테이지 및 현황 이미지

--- a/app/src/main/res/layout/donation_tree.xml
+++ b/app/src/main/res/layout/donation_tree.xml
@@ -62,21 +62,21 @@
         </LinearLayout>
 
         <RelativeLayout
-            android:layout_width="320dp"
+            android:layout_width="330dp"
             android:layout_height="0dp"
-            android:layout_weight="7">
+            android:layout_weight="7"
+            android:background="#F2F2F2">
 
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/img1"
-                android:scaleType="fitXY" />
-
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:layout_gravity="bottom"/>
             <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:src="@drawable/donation_tree"
                 android:scaleType="centerCrop" />
 
