--- a/app/src/main/res/layout/item_donation_main.xml
+++ b/app/src/main/res/layout/item_donation_main.xml
@@ -13,8 +13,8 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="300dp"
-        android:layout_height="400dp"
+        android:layout_width="280dp"
+        android:layout_height="420dp"
         android:background="@drawable/rounded_box"
         android:clipToOutline="true"
         android:scaleType="centerCrop"
@@ -25,14 +25,14 @@
 
     <ImageView
         android:id="@+id/black"
-        android:layout_width="300dp"
-        android:layout_height="400dp"
+        android:layout_width="280dp"
+        android:layout_height="420dp"
         android:layout_centerInParent="true"
-        android:alpha="0.2"
-        android:background="@drawable/rounded_box"
+        android:alpha="1"
+        android:background="@drawable/rounded_box3"
         android:clipToOutline="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/black" />
+        android:src="@drawable/last" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:text="아메리칸 스나이퍼"
             android:textColor="@color/white"
-            android:textSize="28dp"
+            android:textSize="24dp"
             android:textStyle="bold"/>
 
         <LinearLayout
@@ -63,7 +63,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="25dp"
+                android:textSize="18dp"
                 android:textColor="@color/white"
                 android:text="유니세프 한국위원회"
                 android:gravity="start" />
